--- a/groceries.html
+++ b/groceries.html
@@ -2,9 +2,289 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" href="css/groceries.css">
+    <link rel="icon" href="img/HatLogo.png">
+    <title>nozamA - Groceries</title>
 </head>
-<body>
-    <p>Groceries</p>
+
+<body class="parallax">
+<nav class="navbar navbar-expand-lg bottomblur">
+    <a class="navbar-brand" href="#">
+        <img src="img/nozamALogo2.png" width="70" height="30" alt="nozamA logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Electronics</a>
+                    <a class="dropdown-item" href="#">Groceries</a>
+                    <a class="dropdown-item" href="#">Musical Instruments</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Today's Deals</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="#" class="nav-link" data-toggle="modal" data-target="#login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Register</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<!--Real Nav Bar-->
+<nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
+    <a class="navbar-brand" href="#">
+        <img src="img/nozamALogo2.png" width="100" height="35" alt="nozamA logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse mt-3" id="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
+                <div class="dropdown-menu dropmenu">
+                    <a href="http://localhost:8080/electronics" class="dropdown-item">Electronics</a>
+                    <a href="http://localhost:8080/groceries" class="dropdown-item">Groceries</a>
+                    <a href="http://localhost:8080/instruments" class="dropdown-item">Musical Instruments</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Today's Deals</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            {{{ cartLink }}}
+            <li class="nav-item" id="loginbutton">
+                <a href="#" class="nav-link" data-toggle="modal" data-target="#login">Login</a>
+            </li>
+            <li class="nav-item" id="registerbutton">
+                <a href="#" class="nav-link" data-toggle="modal" data-target="#signup">Sign Up</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="modal fade" id="login">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Login</h5>
+                <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                </button>
+            </div>
+            <form method="post" action="/login">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input name="username" type="text" class="form-control" id="username" placeholder="Enter email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="loginpassword">Password</label>
+                        <input name="password" type="password" class="form-control" id="loginpassword" placeholder="Enter password" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-light" data-dismiss="modal">
+                        Cancel
+                    </button>
+                    <button type="button" value="Submit" onclick="form_submit1()" data-dismiss="modal" class="btn btn-pink">Login</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="signup">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Sign Up</h5>
+                <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                </button>
+            </div>
+            <form method="post" action="/register" id="register">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="registeruser">Username</label>
+                        <input name="username" type="text" class="form-control" id="registeruser" placeholder="Enter email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="registerpassword">Password</label>
+                        <div class="input-group" id="passwordeye">
+                            <input name="password" type="password" class="form-control" id="registerpassword" placeholder="Enter password" required>
+                            <div class="input-group-addon">
+                                <a href="#"><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-light" data-dismiss="modal">
+                        Cancel
+                    </button>
+                    <button onclick="form_submit()" value="Submit" data-dismiss="modal" class="btn btn-pink">Register</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <h2 class="mt-3">Groceries</h2>
+    <div class="slider center">
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/chips.png" alt="" />
+            <p class="title">Lays Chips</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/coke.png" alt="" />
+            <p class="title">Coca Cola</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/eggs.png" alt="" />
+            <p class="title">White Eggs</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/butter.png" alt="" />
+            <p class="title">Butter</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/steak.png" alt="" />
+            <p class="title">Kobe Steak</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+    </div>
+
+    <h2>Musical Instruments</h2>
+    <div class="slider center">
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img-wide pt-5"
+                 src="img/products/guitar.png" alt="" />
+            <p class="title">Electric Guitar</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/clarinet.png" alt="" />
+            <p class="title">Clarinet</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/saxophone.png" alt="" />
+            <p class="title">Alto Saxophone</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/triangle.png" alt="" />
+            <p class="title">Triangle</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img-wide pt-5"
+                 src="img/products/piano.png" alt="" />
+            <p class="title">Piano</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+    </div>
+    <h2>Electronics</h2>
+    <div class="slider center">
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/laptop.png" alt="" />
+            <p class="title">Razer Laptop</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/headphones.png" alt="" />
+            <p class="title">Headphones</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img mx-auto"
+                 src="img/products/ipod.png" alt="" />
+            <p class="title">iPod Mini</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img-wide pt-5"
+                 src="img/products/mouse.png" alt="" />
+            <p class="title">Gaming Mouse</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+        <div class="hover-card slick-slide" style="width: 16rem;">
+            <img class="card-img img-fluid"
+                 src="img/products/tv.webp" alt="" />
+            <p class="title">4K HD Television</p>
+            <div class="overlay"></div>
+            <div class="button"><a href="#"> View Details </a></div>
+        </div>
+    </div>
+
+</div>
+<footer class="text-center mt-5">copyright, and stuff</footer>
+<!--Scripts-->
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
+
+<script src="landing.js"></script>
+
+<script src="https://unpkg.com/simplebar@latest/dist/simplebar.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script type="text/javascript">
+    function form_submit() {
+        document.getElementById("register").submit();
+    }
+</script>
+<script type="text/javascript">
+    function form_submit1() {
+        document.getElementById("login_form").submit();
+    }
+</script>
 </body>
 </html>
