--- a/groceries.html
+++ b/groceries.html
@@ -146,124 +146,65 @@
     </div>
 </div>
 
-<div class="container">
-    <h2 class="mt-3">Groceries</h2>
-    <div class="slider center">
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/chips.png" alt="" />
-            <p class="title">Lays Chips</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/coke.png" alt="" />
-            <p class="title">Coca Cola</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/eggs.png" alt="" />
-            <p class="title">White Eggs</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/butter.png" alt="" />
-            <p class="title">Butter</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/steak.png" alt="" />
-            <p class="title">Kobe Steak</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-    </div>
+<div id="group1" class="parallax__group">
+    <div class="parallax__layer parallax__layer--base">
+        <div class="row justify-content-center category">
+            <div class="jumbotron bg-jumbo">
 
-    <h2>Musical Instruments</h2>
-    <div class="slider center">
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img-wide pt-5"
-                 src="img/products/guitar.png" alt="" />
-            <p class="title">Electric Guitar</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/clarinet.png" alt="" />
-            <p class="title">Clarinet</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/saxophone.png" alt="" />
-            <p class="title">Alto Saxophone</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/triangle.png" alt="" />
-            <p class="title">Triangle</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img-wide pt-5"
-                 src="img/products/piano.png" alt="" />
-            <p class="title">Piano</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-    </div>
-    <h2>Electronics</h2>
-    <div class="slider center">
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/laptop.png" alt="" />
-            <p class="title">Razer Laptop</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/headphones.png" alt="" />
-            <p class="title">Headphones</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
-                 src="img/products/ipod.png" alt="" />
-            <p class="title">iPod Mini</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img-wide pt-5"
-                 src="img/products/mouse.png" alt="" />
-            <p class="title">Gaming Mouse</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-        <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img img-fluid"
-                 src="img/products/tv.webp" alt="" />
-            <p class="title">4K HD Television</p>
-            <div class="overlay"></div>
-            <div class="button"><a href="#"> View Details </a></div>
-        </div>
-    </div>
+                    <h1 class="display-4 title-black text-shadow">Groceries</h1>
 
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="img/products/chips.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Lays Chips</h5>
+                    <p class="card-text">Yummy stuff that you should buy for parties</p>
+                </div>
+            </div>
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="img/products/chips.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Lays Chips</h5>
+                    <p class="card-text">Yummy stuff that you should buy for parties</p>
+                </div>
+            </div>
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="img/products/chips.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Lays Chips</h5>
+                    <p class="card-text">Yummy stuff that you should buy for parties</p>
+                </div>
+            </div>
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="img/products/chips.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Lays Chips</h5>
+                    <p class="card-text">Yummy stuff that you should buy for parties</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<div id="group2" class="parallax__group">
+    <div class="parallax__layer parallax__layer--base">
+        <div class="parallax-title">
+            <p>Vegetable Value</p>
+            <h2>30% off purchases when you order over $20 of vegetables</h2>
+            <button type="button" data-dismiss="modal" class="btn btn-pink">View Offer</button>
+        </div>
+    </div>
+    <div class="parallax__layer parallax__layer--back">
+        <img src="img/groceries.png" class="img-fluid groceries-img" alt="...">
+    </div>
+</div>
+<div id="group7" class="parallax__group">
+    <div class="parallax__layer parallax__layer--base">
+        <div class="parallax-title">Base Layer</div>
+    </div>
+</div>
+
 <footer class="text-center mt-5">copyright, and stuff</footer>
 <!--Scripts-->
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
