--- a/instruments.html
+++ b/instruments.html
@@ -5,6 +5,8 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+          integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
@@ -129,8 +131,10 @@
                         <label for="registerpassword">Password</label>
                         <div class="input-group" id="passwordeye">
                             <input name="password" type="password" class="form-control" id="registerpassword" placeholder="Enter password" required>
-                            <div class="input-group-addon">
-                                <a href="#"><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
+                            <div class="input-group-append">
+                                <span class="input-group-text">
+                                  <i class="fa fa-eye" id="eye" role="button" onclick="reveal()"></i>
+                                </span>
                             </div>
                         </div>
                     </div>
