Fix landing carousel

--- a/instruments.html
+++ b/instruments.html
@@ -164,7 +164,7 @@
                 <p class="card-text">So saxy it hurts.</p>
                 <div class="cart-info">
                     <h3>$620.99</h3>
-                    <a href="#" class="btn btn-primary">Add to Cart</a>
+                    <a href="#" class="btn btn-pink">Add to Cart</a>
                 </div>
             </div>
         </div>
@@ -177,7 +177,7 @@
                 <p class="card-text">Nothing says I love you more than a Beethoven masterpiece</p>
                 <div class="cart-info">
                     <h3>$359.99</h3>
-                    <a href="#" class="btn btn-primary">Add to Cart</a>
+                    <a href="#" class="btn btn-pink">Add to Cart</a>
                 </div>
             </div>
         </div>
@@ -190,7 +190,7 @@
                 <p class="card-text">This will get you the ladies or the boys coming to your yard.</p>
                 <div class="cart-info">
                     <h3>$999.99</h3>
-                    <a href="#" class="btn btn-primary">Add to Cart</a>
+                    <a href="#" class="btn btn-pink">Add to Cart</a>
                 </div>
             </div>
         </div>
@@ -203,7 +203,7 @@
                 <p class="card-text">This will get you the ladies or the boys coming to your yard.</p>
                 <div class="cart-info">
                     <h3>$999.99</h3>
-                    <a href="#" class="btn btn-primary">Add to Cart</a>
+                    <a href="#" class="btn btn-pink">Add to Cart</a>
                 </div>
             </div>
         </div>
@@ -216,7 +216,7 @@
                 <p class="card-text">This will get you the ladies or the boys coming to your yard.</p>
                 <div class="cart-info">
                     <h3>$999.99</h3>
-                    <a href="#" class="btn btn-primary">Add to Cart</a>
+                    <a href="#" class="btn btn-pink">Add to Cart</a>
                 </div>
             </div>
         </div>
@@ -229,7 +229,7 @@
                 <p class="card-text">This will get you the ladies or the boys coming to your yard.</p>
                 <div class="cart-info">
                     <h3>$999.99</h3>
-                    <a href="#" class="btn btn-primary">Add to Cart</a>
+                    <a href="#" class="btn btn-pink">Add to Cart</a>
                 </div>
             </div>
         </div>
@@ -242,7 +242,7 @@
                 <p class="card-text">This will get you the ladies or the boys coming to your yard.</p>
                 <div class="cart-info">
                     <h3>$999.99</h3>
-                    <a href="#" class="btn btn-primary">Add to Cart</a>
+                    <a href="#" class="btn btn-pink">Add to Cart</a>
                 </div>
             </div>
         </div>
