--- a/electronics.html
+++ b/electronics.html
@@ -164,7 +164,7 @@
         <p class="card-text">Amazing look. Amazing sound. Amazing taste.</p>
         <div class="cart-info">
           <h3>$89.99</h3>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <a href="#" class="btn btn-pink">Add to Cart</a>
         </div>
       </div>
     </div>
@@ -177,7 +177,7 @@
         <p class="card-text">Go from Bronze rank to Diamond... Guaranteed!</p>
         <div class="cart-info">
           <h3>$99.99</h3>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <a href="#" class="btn btn-pink">Add to Cart</a>
         </div>
       </div>
     </div>
@@ -190,7 +190,7 @@
         <p class="card-text">Git Gud</p>
         <div class="cart-info">
           <h3>$1899.99</h3>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <a href="#" class="btn btn-pink">Add to Cart</a>
         </div>
       </div>
     </div>
